fix contrast ratio >3 <3.1 && update highlight ux/ui && fix analyze with only colors tests && add version var for engine

--- a/src/devtools/panel/tanaguru-devtools-panel.css
+++ b/src/devtools/panel/tanaguru-devtools-panel.css
@@ -966,3 +966,7 @@ td code {
 .subTabs ul[role="tablist"] li:hover {
 	background-color: #f5f5f5;
 }
+
+.highlightON {
+	border-bottom: 2px solid #2A609E;
+}
